--- a/duels-plugin/src/main/resources/plugin.yml
+++ b/duels-plugin/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 name: Duels
 main: com.meteordevelopments.duels.DuelsPlugin
 version: @VERSION@
-softdepend: [ AxGraves, BountyHunters, CombatLogX, CombatTagPlus, DeluxeCombat, Essentials, Factions, LeaderHeads, mcMMO, MVdWPlaceholderAPI, MyPet, PlaceholderAPI, NotBounties, PvPManager, SimpleClans, Vault, WorldGuard, Multiverse-Core, My_Worlds, MultiWorld ]
+softdepend: [ AxGraves, BountyHunters, CombatLogX, CombatTagPlus, DeluxeCombat, Essentials, Factions, FastAsyncWorldEdit, LeaderHeads, mcMMO, MVdWPlaceholderAPI, MyPet, PlaceholderAPI, NotBounties, PvPManager, SimpleClans, Vault, WorldGuard, Multiverse-Core, My_Worlds, MultiWorld ]
 # Multiverse-Core added as soft-depend due to locations being null when Duels is loaded first.
 # Add any world management plugins to softdepend list if arena doesn't load properly in the generated world.
+# FastAsyncWorldEdit added for arena regeneration support
 api-version: 1.13
 
 author: Realized, DUMBO
