Add average rating placeholder and UTF-8 encoding
Introduces the %duels_rating_avg% placeholder to display the average ELO rating across all kits and the no-kit option. Updates build.gradle to enforce UTF-8 encoding for Java compilation. Adds gradle.properties to specify the Java home directory.

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ subprojects {
     apply plugin: 'com.gradleup.shadow'
     apply plugin: 'maven-publish'
 
+    // Ensure all Java compilation uses UTF-8 to avoid encoding issues with box-drawing/art characters.
+    tasks.withType(JavaCompile).configureEach {
+        options.encoding = 'UTF-8'
+    }
+
     repositories {
         mavenCentral()
         mavenLocal()
